--- a/games.html
+++ b/games.html
@@ -132,21 +132,6 @@
         <p>
             AJ Katzenmaier Elementary 24 W. Walton St., Chicago, IL 60610
         </p>
-        <p>
-            Greenbay Elementary 1734 N. Orleans St., Chicago, IL 60614
-        </p>
-        <p>
-            Howard A Yeager Elementary 2245 N. Southport Ave., Chicago, IL 60614
-        </p>
-        <p>
-            Marjorie P Hart Elementary 2625 N. Orchard St., Chicago, IL 60614
-        </p>
-        <p>
-            North Elementary 1409 N. Ogden Ave., Chicago, IL 60610
-        </p>
-        <p>
-            South Elementary 2101 N. Fremont St., Chicago, IL 60614
-        </p>
     </div>
 
     <!--Mapa de google de la primera localizacion-->
@@ -154,6 +139,67 @@
         <iframe
             src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.6572038332542!2d-87.63125808501812!3d41.90022877922042!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd34e07f69da7%3A0x15e198c063fc787c!2sAJ+Katzenmaier+Elementary!5e0!3m2!1ses!2ses!4v1553427961194"
             allowfullscreen>
+        </iframe>
+    </div>
+
+    <div class="gamelocations">
+        <p>
+            Greenbay Elementary 1734 N. Orleans St., Chicago, IL 60614
+        </p>
+    </div>
+
+    <div class="map">
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.024405117761!2d-87.64002543501765!3d41.91383407921933!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3407260c45b%3A0xb351205fae50c6f3!2sGreenbay+Elementary!5e0!3m2!1ses!2ses!4v1553517124076"
+            allowfullscreen>
+        </iframe>
+    </div>
+
+    <div class="gamelocations">
+        <p>
+            Howard A Yeager Elementary 2245 N. Southport Ave., Chicago, IL 60614
+        </p>
+    </div>
+    
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.585850578756!2d-87.66511018501727!3d41.92326097921864!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd2e37f852467%3A0xb6cb22b2f0358874!2sHoward+A+Yeager+Elementary!5e0!3m2!1ses!2ses!4v1553517387949" 
+        allowfullscreen>
+        </iframe>
+    </div>
+
+    <div class="gamelocations">
+        <p>
+            Marjorie P Hart Elementary 2625 N. Orchard St., Chicago, IL 60614
+        </p>
+    </div>
+
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.289253050459!2d-87.64816033501702!3d41.929635479218135!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd30f2637f9d7%3A0xdbff5d5dfcfcfa35!2sMarjorie+P+Hart+Elementary!5e0!3m2!1ses!2ses!4v1553517495936" 
+        allowfullscreen>
+        </iframe>
+    </div>    
+
+    <div class="gamelocations">
+        <p>
+            North Elementary 1409 N. Ogden Ave., Chicago, IL 60610
+        </p>
+    </div>
+
+    <div class="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2969.336674276683!2d-87.64834428501786!3d41.90712067921989!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd33af14860a5%3A0x5736e62f19086c62!2sNorth+Elementary!5e0!3m2!1ses!2ses!4v1553517615622" 
+            allowfullscreen>
+            </iframe>
+    </div>
+
+    <div class="gamelocations">
+        <p>
+            South Elementary 2101 N. Fremont St., Chicago, IL 60614
+        </p>
+    </div>
+
+    <div class="map">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2968.730653315667!2d-87.65286418501739!3d41.920148579218875!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x880fd3196e269cbf%3A0x1caabcbc4893f0da!2sSt+James+Lutheran+School!5e0!3m2!1ses!2ses!4v1553517694308" 
+        allowfullscreen>
         </iframe>
     </div>
 
