adding feedback form

--- a/form.html
+++ b/form.html
@@ -34,7 +34,7 @@
     </nav>
 
     <!--action="/login.js"-->
-    <form class="formregistration" action="#" method="POST">
+    <form class="formregistration" action="feedback.html" method="GET">
 
         <h2>Registration Form</h2>
         <fieldset class="playerinfo">
