--- a/feedback.html
+++ b/feedback.html
@@ -8,7 +8,8 @@
     <p align=center>&nbsp;</p>
     <h1 align=center>
         <font size="+1">The following information has been sent as your
-            feedback:</font>
+            feedback:
+        </font>
     </h1>
 
     <table border="1" align=center width="226">
