--- a/feedback.html
+++ b/feedback.html
@@ -5,12 +5,29 @@
 </head>
 
 <body>
-    <p align=center>&nbsp;</p>
-    <h1 align=center>
-        <font size="+1">The following information has been sent as your
-            feedback:
-        </font>
-    </h1>
+    <header>
+        <h1>Northside Youth Soccer League</h1>
+        <h2>The following information has been sent as your
+                feedback:</h2>
+    </header>
+
+    <!--Coleccion de las imagenes-->
+    <div class="images">
+        <img src="images/sport_child2.jpg" alt="children_playing">
+        <img src="images/sport_child.jpg" alt="children_playing">
+        <img src="images/nysl_logo.png" alt="logo_ball">
+    </div>
+
+    <nav>
+        <ul>
+            <li><a href="Index.html">Home</a></li>
+            <li><a href="about.html">About NYSL</a></li>
+            <li><a href="games.html">Games</a></li>
+            <li><a href="rules.html">Rules</a></li>
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="form.html">Registration</a></li>
+        </ul>
+    </nav>
 
     <table border="1" align=center width="226">
         <tr>
