--- a/feedback.html
+++ b/feedback.html
@@ -1,14 +1,20 @@
 <html>
+<html lang="en">
 
 <head>
-    <title>Feedback Sent</title>
+    <meta charset="UTF-8">
+
+    <link rel="stylesheet" href="style/main.css">
+    <!--Icono de la pagina web-->
+    <link rel="icon" type="image/png" href="images/nysl_logo.png" />
+    <title>Form</title>
 </head>
 
 <body>
     <header>
         <h1>Northside Youth Soccer League</h1>
         <h2>The following information has been sent as your
-                feedback:</h2>
+            feedback</h2>
     </header>
 
     <!--Coleccion de las imagenes-->
@@ -29,10 +35,10 @@
         </ul>
     </nav>
 
-    <table border="1" align=center width="226">
+    <table>
         <tr>
-            <th align="center">Form Field</th>
-            <th align="center">Field Value</th>
+            <th>Form Field</th>
+            <th>Field Value</th>
         </tr>
 
         <script language="javascript">
