--- a/form.html
+++ b/form.html
@@ -215,7 +215,7 @@
             </fieldset>
         </article>
 
-        <button name="submit">
+        <button>
             Sign Up
         </button>
     </form>
