--- a/form.html
+++ b/form.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style/main.css">
     <!--Icono de la pagina web-->
     <link rel="icon" type="image/png" href="images/nysl_logo.png" />
+    <!--Link al archivo js-->
+    <script src="script/script.js" language="javascript" type="text/javascript"></script>
     <title>Form</title>
 </head>
 
@@ -41,22 +43,22 @@
             <legend>Player Information</legend>
 
             <label for="first_name">Player’s First Name:</label>
-            <input type="text" id="first_name" name="first_name" placeholder="your first name" required>
+            <input type="text" id="first_name" name="first_name" onchange="validarNombre()" placeholder="your first name" required>
 
             <label for="last_name">Last Name:</label>
-            <input type="text" id="last_name" name="last_name" placeholder="your last name" required>
+            <input type="text" id="last_name" name="last_name" onchange="validarApellido()" placeholder="your last name" required>
 
             <label for="email">Email:</label>
-            <input type="email" id="email" name="email" placeholder="your@email.com" required>
+            <input type="email" id="email" name="email" onchange="validarEmail()" placeholder="your@email.com" required>
 
             <label for="street_address">Street Address:</label>
-            <input type="text" id="street_address" name="street_address" placeholder="your address" required>
+            <input type="text" id="street_address" name="street_address" onchange="ValidarstreetAddress()" placeholder="your address" required>
 
             <label for="zip_code">Zip code</label>
-            <input type="text" id="zip_code" name="zip_code" placeholder="your zip code" required>
+            <input type="text" id="zip_code" name="zip_code" onchange="validarZipCode()" placeholder="your zip code" required>
 
             <label for="birth_date">Birth Date (mm/dd/yyyy):</label>
-            <input type="date" id="birth_date" name="birth_date" required>
+            <input type="date" id="birth_date" onchange="validarCampo()" name="birth_date" required>
         </fieldset>
 
         <fieldset class="gender">
@@ -207,7 +209,7 @@
             cancellation policy and agree to its terms.
             <fieldset class="parentsignature">
                 <label for="parent_guardian_signature">Parent/Guardian Signature: </label>
-                <input type="text" name="parent_guardian_signature" id="parent_guardian_signature" placeholder="parent's signature" required>
+                <input type="text" name="parent_guardian_signature" id="parent_guardian_signature" onchange="validarCampo()" placeholder="parent's signature" required>
             </fieldset>
             <fieldset class="datefirm">
                 <label for="date_firm">Date: </label>
