cleaning bugs parentsignature

--- a/form.html
+++ b/form.html
@@ -209,7 +209,7 @@
             cancellation policy and agree to its terms.
             <fieldset class="parentsignature">
                 <label for="parent_guardian_signature">Parent/Guardian Signature: </label>
-                <input type="text" name="parent_guardian_signature" id="parent_guardian_signature" onchange="validarCampo()" placeholder="parent's signature" required>
+                <input type="text" name="parent_guardian_signature" id="parent_guardian_signature" onchange="validarParentSignature()" placeholder="parent's signature" required>
             </fieldset>
             <fieldset class="datefirm">
                 <label for="date_firm">Date: </label>
