--- a/form.html
+++ b/form.html
@@ -8,7 +8,7 @@
     <!--Icono de la pagina web-->
     <link rel="icon" type="image/png" href="images/nysl_logo.png" />
     <!--Link al archivo js-->
-    <script src="script/script.js" language="javascript" type="text/javascript"></script>
+    <script src="script/script.js"></script>
     <title>Form</title>
 </head>
 
